--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ DEBUG=True
 
 # Allowed hosts - comma-separated list
 ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Database Configuration (PostgreSQL)
+DB_NAME=db_name
+DB_USER=db_user
+DB_PASSWORD=db_password 
+DB_HOST=localhost
+DB_PORT=5432
