--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,41 @@
-﻿# Django Settings
+﻿# ===============================
+# Notes
+# ===============================
+# - This file is intended as an example and should be copied to `.env` before use.
+# - Override values in `.env` for local development or Docker deployment as needed.
+# - Keep SECRET_KEY secret in production.
+
+# ===============================
+# Django Settings
+# ===============================
 # Generate a new secret key: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
 SECRET_KEY=django-insecure-change-this-in-production-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# For local/dev — True (shows errors). For staging/prod — False.
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
+# ===============================
 # Database Configuration
-DB_NAME=db_name
-DB_USER=db_user
-DB_PASSWORD=db_password
-DB_HOST=localhost
+# ===============================
+
+# Database name, user, and password
+DB_NAME=iot_hub_db
+DB_USER=iot_user_db
+DB_PASSWORD=iot_password
+
+# Database host:
+# - For local launch without Docker: use DB_HOST=localhost
+#   (make sure PostgreSQL is installed locally, database and user are created)
+# - For Docker Compose launch: use DB_HOST=db
+DB_HOST=db  # or localhost for local PostgreSQL
 DB_PORT=5432
 
+# ===============================
 # CORS Configuration
+# ===============================
 # Set to True only for development (allows all origins)
 CORS_ALLOW_ALL_ORIGINS=False
+
 # Comma-separated list of allowed origins (used when CORS_ALLOW_ALL_ORIGINS=False)
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
