--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     volumes:
       - ./docs:/docs
     restart: always
+    networks:
+      - backend
+
   web:
     build:
       context: .
@@ -22,6 +25,12 @@ services:
       - "8000:8000"
     env_file:
       - ./.env
+    networks:
+      - backend
 
 volumes:
   media_data:
+
+networks:
+  backend:
+    driver: bridge
