--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,112 @@
 ﻿# ===============================
-# Notes
+# IoT Hub - Environment Variables Example
 # ===============================
-# - This file is intended as an example and should be copied to `.env` before use.
-# - Override values in `.env` for local development or Docker deployment as needed.
-# - Keep SECRET_KEY secret in production.
+#
+# IMPORTANT SECURITY NOTES:
+# - This file is a TEMPLATE. Copy it to .env and fill in real values.
+# - NEVER commit .env file to version control (it's in .gitignore)
+# - Variables marked with [SECRET] must NEVER be committed
+# - Generate strong random values for all [SECRET] variables
+# - For CI/CD, use GitHub Secrets or your CI platform's secret store
+#
+# ===============================
+# Django Core Settings
+# ===============================
 
-# ===============================
-# Django Settings
-# ===============================
-# Generate a new secret key: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+# [SECRET] Django secret key - used for cryptographic signing
+# Generate: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
 SECRET_KEY=django-insecure-change-this-in-production-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# For local/dev — True (shows errors). For staging/prod — False.
+# Debug mode: True for development, False for staging/production
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+
+# Comma-separated list of allowed hostnames
+ALLOWED_HOSTS=localhost,127.0.0.1,web
 
 # ===============================
 # Database Configuration
 # ===============================
 
-# Database name, user, and password
+# Database name
 DB_NAME=iot_hub_db
+
+# Database user
 DB_USER=iot_user_db
+
+# [SECRET] Database password
 DB_PASSWORD=iot_password
 
 # Database host:
-# - For local launch without Docker: use DB_HOST=localhost
-#   (make sure PostgreSQL is installed locally, database and user are created)
-# - For Docker Compose launch: use DB_HOST=db
-DB_HOST=db  # or localhost for local PostgreSQL
+# - For Docker Compose: use 'db' (service name)
+# - For local PostgreSQL: use 'localhost'
+DB_HOST=db
+
+# Database port
 DB_PORT=5432
 
 # ===============================
 # CORS Configuration
 # ===============================
-# Set to True only for development (allows all origins)
+
+# Allow all origins (only for development)
 CORS_ALLOW_ALL_ORIGINS=False
 
 # Comma-separated list of allowed origins (used when CORS_ALLOW_ALL_ORIGINS=False)
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
+
+# ===============================
+# JWT Authentication
+# ===============================
+
+# [SECRET] JWT signing key - must be different from SECRET_KEY
+# Generate: python -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET_KEY=your-jwt-secret-key-here-minimum-32-characters-long
+
+# JWT algorithm (HS256 recommended for MVP)
+JWT_ALGORITHM=HS256
+
+# Access token lifetime in minutes (60 for dev, 15 for staging/prod)
+JWT_ACCESS_TOKEN_LIFETIME_MINUTES=60
+
+# Refresh token lifetime in days (7 for dev, 1 for staging/prod)
+JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
+
+# ===============================
+# Rate Limiting
+# ===============================
+
+# Enable/disable rate limiting middleware
+RATE_LIMIT_ENABLED=True
+
+# Telemetry ingestion endpoint limits
+RATE_LIMIT_TELEMETRY_LIMIT=1000
+RATE_LIMIT_TELEMETRY_WINDOW=60
+
+# Admin interface limits
+RATE_LIMIT_ADMIN_LIMIT=30
+RATE_LIMIT_ADMIN_WINDOW=60
+
+# Login endpoint limits (prevent brute force)
+RATE_LIMIT_LOGIN_LIMIT=5
+RATE_LIMIT_LOGIN_WINDOW=60
+
+# ===============================
+# CI/CD Secrets Management
+# ===============================
+#
+# For GitHub Actions:
+# 1. Go to Repository  Settings  Secrets and variables  Actions
+# 2. Add each [SECRET] variable as a repository secret
+# 3. Reference in workflow: ${{ secrets.SECRET_KEY }}
+#
+# For GitLab CI:
+# 1. Go to Settings  CI/CD  Variables
+# 2. Add each [SECRET] variable as a masked variable
+# 3. Reference in .gitlab-ci.yml: $SECRET_KEY
+#
+# Required secrets for CI:
+# - SECRET_KEY
+# - DB_PASSWORD
+# - JWT_SECRET_KEY
+#
+# ===============================
