--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,45 @@ jobs:
         run: |
           ruff check .
 
+  security-scan:
+    name: Security Vulnerability Scan
+    runs-on: ubuntu-22.04
+    defaults: *backend_defaults
+
+    steps:
+      - name: Get code
+        uses: actions/checkout@v5
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+          cache: pip
+          cache-dependency-path: backend/requirements.txt
+
+      - name: Install safety
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install safety
+
+      - name: Run safety check
+        run: |
+          safety check --file requirements.txt --json || safety check --file requirements.txt
+        continue-on-error: true
+
+      - name: Upload security report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-scan-report
+          path: |
+            backend/requirements.txt
+          retention-days: 30
 
   test:
     name: Run tests
     runs-on: ubuntu-22.04
-    needs: [ lint ]
+    needs: [ lint, security-scan ]
 
     env:
       DB_NAME: testdb
