create start scripts for prod and dev, move migrations from entrypoint

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    command: python manage.py runserver 0.0.0.0:8000
+    command: /start-web-dev.sh
     volumes:
       - static_data:/app/staticfiles
       - media_data:/app/media
