--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,21 @@ CORS_ALLOW_ALL_ORIGINS=False
 
 # Comma-separated list of allowed origins (used when CORS_ALLOW_ALL_ORIGINS=False)
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
+
+# ===============================
+# Celery Configuration
+# ===============================
+
+# For Docker Compose launch: use redis://redis:6379/0
+# For local launch without Docker: redis://127.0.0.1:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# positive integer value - number of tasks executed in parallel
+CELERY_CONCURRENCY=2
+
+# ===============================
+# Flower (Celery monitoring UI)
+# ===============================
+CELERY_FLOWER_USER=your-flower-user
+CELERY_FLOWER_PASSWORD=your-flower-password
