add prometheus redis celery grafana + django logs

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ DB_PASSWORD=iot_password
 # - For local launch without Docker: use DB_HOST=localhost
 #   (make sure PostgreSQL is installed locally, database and user are created)
 # - For Docker Compose launch: use DB_HOST=db
-DB_HOST=db  # or localhost for local PostgreSQL
+DB_HOST=db
 DB_PORT=5432
 
 # ===============================
