--- a/.env.example
+++ b/.env.example
@@ -3,32 +3,33 @@
 # ===============================
 # - This file is intended as an example and should be copied to `.env` before use.
 # - Override values in `.env` for local development or Docker deployment as needed.
+# - DO NOT commit real secrets to the repository.
 # - Keep SECRET_KEY secret in production.
 
 # ===============================
 # Django Settings
 # ===============================
-# Generate a new secret key: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+# Generate a new secret key:
+# python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
 SECRET_KEY=django-insecure-change-this-in-production-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# For local/dev — True (shows errors). For staging/prod — False.
+# For local/dev — True (shows detailed errors).
+# For staging/production — False.
 DEBUG=True
+
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
 # ===============================
 # Database Configuration
 # ===============================
-
-# Database name, user, and password
 DB_NAME=iot_hub_db
 DB_USER=iot_user_db
 DB_PASSWORD=iot_password
 
 # Database host:
-# - For local launch without Docker: use DB_HOST=localhost
-#   (make sure PostgreSQL is installed locally, database and user are created)
-# - For Docker Compose launch: use DB_HOST=db
-DB_HOST=db  # or localhost for local PostgreSQL
+# - Local (no Docker): localhost
+# - Docker Compose: db
+DB_HOST=db
 DB_PORT=5432
 
 # ===============================
@@ -37,5 +38,29 @@ DB_PORT=5432
 # Set to True only for development (allows all origins)
 CORS_ALLOW_ALL_ORIGINS=False
 
-# Comma-separated list of allowed origins (used when CORS_ALLOW_ALL_ORIGINS=False)
+# Used when CORS_ALLOW_ALL_ORIGINS=False
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
+
+# ===============================
+# Admin / Dev Users (DEV & TEST ONLY)
+# ===============================
+# Enables the setup_admin management command.
+# NEVER enable this in production.
+ALLOW_SETUP_ADMIN=true
+
+# ---- Superuser ----
+DEV_SUPERUSER_USERNAME=admin
+DEV_SUPERUSER_EMAIL=admin@example.com
+DEV_SUPERUSER_PASSWORD=admin123
+
+# ---- Admin role user ----
+DEV_ADMIN_USERNAME=admin_user
+DEV_ADMIN_PASSWORD=admin123
+
+# ---- Operator role user ----
+DEV_OPERATOR_USERNAME=operator_user
+DEV_OPERATOR_PASSWORD=operator123
+
+# ---- Viewer role user ----
+DEV_VIEWER_USERNAME=viewer_user
+DEV_VIEWER_PASSWORD=viewer123
