--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@
 # - Keep SECRET_KEY secret in production.
 
 # ===============================
+# Docker Compose Configuration
+# ===============================
+
+# project name for docker-compose.yml
+COMPOSE_PROJECT_NAME=iot-hub
+
+# ===============================
 # Django Settings
 # ===============================
 # Generate a new secret key: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
