--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,15 @@ CORS_ALLOW_ALL_ORIGINS=False
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
 
 # ===============================
+# Redis Configuration
+# ===============================
+
+# For Docker Compose launch: use REDIS_HOST=redis
+# For local launch without Docker: use REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# ===============================
 # Celery Configuration
 # ===============================
 
