--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,13 @@ CELERY_CONCURRENCY=2
 # ===============================
 CELERY_FLOWER_USER=1
 CELERY_FLOWER_PASSWORD=1
+
+# ===============================
+# Django log levels
+# DEBUG     - detailed logs (development only)
+# INFO      - general application info
+# WARNING   - non-critical issues
+# ERROR     - errors that affect requests
+# CRITICAL  - system-critical failures
+# ===============================
+DJANGO_LOG_LEVEL=INFO
