--- a/devops/prometheus.yml
+++ b/devops/prometheus.yml
@@ -15,3 +15,9 @@ scrape_configs:
       - targets: ['web:8000']
         labels:
           app: 'django'
+
+  - job_name: 'worker'
+    static_configs:
+      - targets: ['celery-exporter:9808']
+        labels:
+          app: 'worker'        
