add rate limit cong to env so now we can change rate limits values

--- a/.env.example
+++ b/.env.example
@@ -70,21 +70,13 @@ JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
 # ===============================
 # Rate Limiting
 # ===============================
-
-# Enable/disable rate limiting middleware
-RATE_LIMIT_ENABLED=True
-
-# Telemetry ingestion endpoint limits
-RATE_LIMIT_TELEMETRY_LIMIT=1000
-RATE_LIMIT_TELEMETRY_WINDOW=60
-
-# Admin interface limits
-RATE_LIMIT_ADMIN_LIMIT=30
-RATE_LIMIT_ADMIN_WINDOW=60
-
-# Login endpoint limits (prevent brute force)
-RATE_LIMIT_LOGIN_LIMIT=5
-RATE_LIMIT_LOGIN_WINDOW=60
+#
+# Optional JSON config. When unset, defaults are used (enabled, trusted_proxies,
+# response, rules). Keys: enabled, trusted_proxies, response, rules.
+# Example (single line, no extra spaces):
+# RATE_LIMIT_CONFIG_JSON={"enabled":true,"trusted_proxies":["127.0.0.1/32","10.0.0.0/8"],"response":{"code":429,"message":"Too many requests"},"rules":{"/api/login/":{"limit":10,"window":60},"/api/":{"limit":100,"window":60}}}
+#
+# RATE_LIMIT_CONFIG_JSON=
 
 # ===============================
 # CI/CD Secrets Management
