dashboards in grafana

--- a/.env.example
+++ b/.env.example
@@ -108,25 +108,6 @@ CELERY_CONCURRENCY=2
 CELERY_FLOWER_USER=your-flower-user
 CELERY_FLOWER_PASSWORD=your-flower-password
 
-
-# ===============================
-# Celery Configuration
-# ===============================
-
-# For Docker Compose launch: use redis://redis:6379/0
-# For local launch without Docker: redis://127.0.0.1:6379/0
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
-
-# positive integer value - number of tasks executed in parallel
-CELERY_CONCURRENCY=2
-
-# ===============================
-# Flower (Celery monitoring UI)
-# ===============================
-CELERY_FLOWER_USER=1
-CELERY_FLOWER_PASSWORD=1
-
 # ===============================
 # Django log levels
 # DEBUG     - detailed logs (development only)
@@ -136,3 +117,9 @@ CELERY_FLOWER_PASSWORD=1
 # CRITICAL  - system-critical failures
 # ===============================
 DJANGO_LOG_LEVEL=INFO
+
+# ==============================
+# Grafana admin user
+# ==============================
+GRAFANA_ADMIN_USER=CHANGE_ME
+GRAFANA_ADMIN_PASSWORD=CHANGE_ME
