log_level env.example

--- a/.env.example
+++ b/.env.example
@@ -109,7 +109,7 @@ CELERY_FLOWER_USER=your-flower-user
 CELERY_FLOWER_PASSWORD=your-flower-password
 
 # ===============================
-# Django log levels
+# Django and Celery log levels
 # DEBUG     - detailed logs (development only)
 # INFO      - general application info
 # WARNING   - non-critical issues
@@ -117,6 +117,7 @@ CELERY_FLOWER_PASSWORD=your-flower-password
 # CRITICAL  - system-critical failures
 # ===============================
 DJANGO_LOG_LEVEL=INFO
+CELERY_LOG_LEVEL=INFO
 
 # ==============================
 # Grafana admin user
