--- a/.env.example
+++ b/.env.example
@@ -34,11 +34,32 @@ ALLOWED_HOSTS=localhost,127.0.0.1,web
 # ===============================
 # Database Configuration - MUST be changed in production!
 
-DB_NAME=CHANGE_ME_DATABASE_NAME
+# For development/testing, you can use these sample values:
+# DB_NAME=iot_hub_db
+# DB_USER=iot_user_db
+# DB_PASSWORD=iot_password
+
+DB_NAME=CHANGE_ME_DATABASE_NAME 
 DB_USER=CHANGE_ME_DATABASE_USER
 DB_PASSWORD=CHANGE_ME_DATABASE_PASSWORD
-DB_HOST=localhost
+
+# Database host:
+# - For local launch without Docker: use DB_HOST=localhost
+#   (make sure PostgreSQL is installed locally, database and user are created)
+# - For Docker Compose launch: use DB_HOST=db
+DB_HOST=db
 DB_PORT=5432
+
+# Enable TimescaleDB extension (set to true to use TimescaleDB features)
+ENABLE_TIMESCALEDB=false #NOTE: use lowercase true/false
+
+# Enable Seed Data on startup (set to true to populate initial data)
+ENABLE_SEED_DATA=false #NOTE: use lowercase true/false
+
+# Passwords for dev/test users created during seeding
+DEV_ADMIN_PASSWORD = DevSecurePass
+DEV_CLIENT_ALEX_PASSWORD = AlexClientPass
+DEV_CLIENT_JORDAN_PASSWORD = JordanClientPass
 
 # ===============================
 # CORS Configuration
