--- a/.env.example
+++ b/.env.example
@@ -111,10 +111,33 @@ JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
 #
 # ===============================
 
+# ===============================
+# Admin / Dev Users (DEV & TEST ONLY)
+# ===============================
+
+# Allow running setup_admin command.
+# NEVER enable this in production.
+ALLOW_SETUP_ADMIN=true
+
+# ---- Superuser ----
+DEV_SUPERUSER_USERNAME=1
+DEV_SUPERUSER_EMAIL=superadmin@example.com
+DEV_SUPERUSER_PASSWORD=1
+
+# ---- Admin role user ----
+DEV_ADMIN_USERNAME=1
+DEV_ADMIN_EMAIL=admin_user@example.com
+DEV_ADMIN_PASSWORD=1
+
+# ---- Operator role user ----
+DEV_OPERATOR_USERNAME=1
+DEV_OPERATOR_EMAIL=operator@example.com
+DEV_OPERATOR_PASSWORD=1
+
 # ---- Viewer role user ----
-DEV_VIEWER_USERNAME=viewer_user
+DEV_VIEWER_USERNAME=1
 DEV_VIEWER_EMAIL=viewer@example.com
-DEV_VIEWER_PASSWORD=viewer123
+DEV_VIEWER_PASSWORD=1
 
 # ===============================
 # Redis Configuration
@@ -124,6 +147,25 @@ DEV_VIEWER_PASSWORD=viewer123
 # For local launch without Docker: use REDIS_HOST=127.0.0.1
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# ===============================
+# Celery Configuration
+# ===============================
+
+# For Docker Compose launch: use redis://redis:6379/0
+# For local launch without Docker: redis://127.0.0.1:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# positive integer value - number of tasks executed in parallel
+CELERY_CONCURRENCY=2
+
+# ===============================
+# Flower (Celery monitoring UI)
+# ===============================
+CELERY_FLOWER_USER=your-flower-user
+CELERY_FLOWER_PASSWORD=your-flower-password
+
 
 # ===============================
 # Celery Configuration
