fix simulator and telemetry endpoint

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,11 @@ DEV_CLIENT_ALEX_PASSWORD = AlexClientPass
 DEV_CLIENT_JORDAN_PASSWORD = JordanClientPass
 
 # ===============================
+# Telemetry Ingestion Endpoint
+# ===============================
+TELEMETRY_URL = "http://web:8000/api/telemetry/"
+
+# ===============================
 # CORS Configuration
 # ===============================
 
