fix celery-export container works for both platforms and requirements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,7 @@ services:
   
   celery-exporter:
     image: danihodovic/celery-exporter
+    platform: linux/amd64
     container_name: celery-exporter
     command: --broker-url=${CELERY_BROKER_URL}
     ports:
