prism mock-server, contract tests and ci tests for api spec

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ x-django-base: &django_base
 services:
   swagger-ui:
     image: swaggerapi/swagger-ui
-    container_name: openAPI_specification
+    container_name: swagger-ui
     restart: always
     ports:
       - "5433:8080"
