add mqtt adapter for telemetry ingestion

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,11 @@ DEV_CLIENT_JORDAN_PASSWORD = JordanClientPass
 # ===============================
 TELEMETRY_URL = "http://web:8000/api/telemetry/"
 
+# Batch size threshold for automatic async ingestion:
+# if request payload is a JSON array
+# and len(payload) > threshold -> queued via Celery (202)
+TELEMETRY_ASYNC_BATCH_THRESHOLD=50
+
 # ===============================
 # CORS Configuration
 # ===============================
@@ -173,3 +178,25 @@ CELERY_LOG_LEVEL=INFO
 # ==============================
 GRAFANA_ADMIN_USER=CHANGE_ME
 GRAFANA_ADMIN_PASSWORD=CHANGE_ME
+
+# ==============================
+# MQTT Adapter
+# ==============================
+# For Docker Compose launch: use MQTT_HOST=mosquitto
+# For local launch without Docker: use MQTT_HOST=127.0.0.1
+MQTT_HOST=mosquitto
+
+# MQTT broker port (default 1883)
+MQTT_PORT=1883
+
+# MQTT keepalive seconds
+MQTT_KEEPALIVE=60
+
+# Topic to subscribe for telemetry messages
+MQTT_TOPIC=telemetry
+
+# QoS level (0/1/2).
+MQTT_QOS=1
+
+# MQTT client id for adapter
+MQTT_CLIENT_ID=iot-hub-mqtt-adapter
