configure mqtt adapter container

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,5 +10,9 @@ services:
     volumes:
       - ./backend:/app
 
+  mqtt-adapter:
+    volumes:
+      - ./backend:/app
+
 volumes:
   static_data:
